# db-csv-faker

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
src/: lib.rs
src/fields/: field_error.rs  integer_32_field.rs  mod.rs  string_field.rs  uuid_v4_field.rs
tests/fields/: Integer32Field.test.js  StringField.test.js  UUIDV4Field.test.js
