[package]
name = "db-csv-faker"
version = "0.1.0"
description = "tiny native extendable npm package for mocking db .csvs"
authors = ["zkud"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8.4"

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.8"
